--- a/Project/BabyNeeds/app/src/main/res/layout/list_row.xml
+++ b/Project/BabyNeeds/app/src/main/res/layout/list_row.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
+        android:layout_margin="12dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
